--- a/src/wwwroot/css/app.css
+++ b/src/wwwroot/css/app.css
@@ -67,38 +67,55 @@ a, .btn-link {
         content: "An error has occurred."
     }
 
-.loading-progress {
+.loading-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.loading-progress-image {
+    width: 100px;
+    animation: pulse 1.5s infinite;
+    margin-bottom: 2rem;
+}
+
+.loading-progress-bar {
+    background: silver;
+    width: 150px;
+    height: 0.75rem;
+    border-radius: 10rem;
+    overflow: hidden;
     position: relative;
-    display: block;
-    width: 8rem;
-    height: 8rem;
-    margin: 20vh auto 1rem auto;
 }
 
-    .loading-progress circle {
-        fill: none;
-        stroke: #e0e0e0;
-        stroke-width: 0.6rem;
-        transform-origin: 50% 50%;
-        transform: rotate(-90deg);
-    }
-
-        .loading-progress circle:last-child {
-            stroke: #1b6ec2;
-            stroke-dasharray: calc(3.141 * var(--blazor-load-percentage, 0%) * 0.8), 500%;
-            transition: stroke-dasharray 0.05s ease-in-out;
-        }
-
-.loading-progress-text {
+.loading-progress-bar:after {
+    content: '';
     position: absolute;
-    text-align: center;
-    font-weight: bold;
-    inset: calc(20vh + 3.25rem) 0 auto 0.2rem;
+    inset: 0;
+    background: #594ae2;
+    scale: var(--blazor-load-percentage, 0%) 100%;
+    transform-origin: left top;
+    transition: scale ease-out 0.5s;
 }
 
-    .loading-progress-text:after {
-        content: var(--blazor-load-percentage-text, "Loading");
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
     }
+    50% {
+        transform: scale(1.1);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
 
 code {
     color: #c02d76;
