Use relative path for nav link

--- a/src/Layout/MainLayout.razor
+++ b/src/Layout/MainLayout.razor
@@ -10,7 +10,7 @@
         <FluentHeader>PDF Data Extraction Demo</FluentHeader>
         <FluentStack Orientation="Orientation.Horizontal" HorizontalGap="10">
             <FluentNavLink Style="font-weight: lighter" Href="/">Home</FluentNavLink>
-            <FluentNavLink Style="font-weight: lighter" Href="/templates">Templates</FluentNavLink>
+            <FluentNavLink Style="font-weight: lighter" Href="templates">Templates</FluentNavLink>
         </FluentStack>
     </FluentHeader>
 
