--- a/src/Layout/MainLayout.razor
+++ b/src/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
     <FluentHeader>
         <FluentHeader>PDF Data Extraction Demo</FluentHeader>
         <FluentStack Orientation="Orientation.Horizontal" HorizontalGap="10">
-            <FluentNavLink Style="font-weight: lighter" Href="/">Home</FluentNavLink>
+            <FluentNavLink Style="font-weight: lighter" Href="#">Home</FluentNavLink>
             <FluentNavLink Style="font-weight: lighter" Href="templates">Templates</FluentNavLink>
         </FluentStack>
     </FluentHeader>
