--- a/src/Layout/MainLayout.razor
+++ b/src/Layout/MainLayout.razor
@@ -14,7 +14,7 @@
         </FluentStack>
     </FluentHeader>
 
-    <FluentBodyContent Style="max-width: 1200px; margin: 0 auto;">
+    <FluentBodyContent Style="max-width: 1200px; margin: 20px auto;">
         @Body
     </FluentBodyContent>
 </FluentLayout>
